fix menu overflow scroll

--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -1,5 +1,4 @@
 .menu {
-  overflow: auto; /* to scroll the menu if needed */
   scrollbar-gutter: stable;
 
   background-color: $color-light-bg;
@@ -15,11 +14,10 @@
     @include content-container;
 
     max-width: $max-container-width;
-  }
 
-  &__content {
+    overflow: auto; /* to scroll the menu if needed */
+    overflow-y: auto;
     height: 100vh;
-    box-sizing: border-box;
   }
 
   &__top {
